--- a/ZooAbyss.csproj
+++ b/ZooAbyss.csproj
@@ -5,7 +5,7 @@
     <AssemblyName>ZooAbyss</AssemblyName>
     <TargetFramework>net6.0</TargetFramework>
     <PlatformTarget>AnyCPU</PlatformTarget>
-    <LangVersion>latest</LangVersion>
+    <LangVersion>10.0</LangVersion>
   </PropertyGroup>
   <ItemGroup>
     <None Remove="Items\GreenBeetleItem.png" />
